# PyWEB_homework_mod_8

./: README.md  pyproject.toml
Part_1/: hw.py  main.py  models.py  seed.py
Part_2/: consumer_email.py  consumer_sms.py  models.py  producer.py
