[tool.poetry]
name = "homework-8"
version = "0.1.0"
description = ""
authors = ["IronWoodcutter <a.v.vlasov@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
redis = "^5.0.1"
redis-lru = "^0.1.2"
faker = "^20.0.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
